// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MethodField should match the previous snapshot 1`] = `
<div
  className="form-group"
>
  <div
    className="col-xs-12"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-6"
      >
        <label
          className="control-label sr-only"
          htmlFor="method"
        >
          Method
        </label>
        <select
          className="form-control"
          id="method"
          placeholder="Method"
          type={undefined}
          value="CUSTOM"
        >
          <option
            value="GET"
          >
            GET
          </option>
          <option
            value="POST"
          >
            POST
          </option>
          <option
            value="PUT"
          >
            PUT
          </option>
          <option
            value="DELETE"
          >
            DELETE
          </option>
          <option
            value="PATCH"
          >
            PATCH
          </option>
          <option
            value="HEAD"
          >
            HEAD
          </option>
          <option
            value="JSONP"
          >
            JSONP
          </option>
          <option
            value="CUSTOM"
          >
            CUSTOM
          </option>
        </select>
      </div>
      <div
        className="col-xs-6"
      >
        <input
          className="form-control"
          id="method"
          type={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MethodField should match the previous snapshot with invalid field state 1`] = `
<div
  className="form-group has-error"
>
  <div
    className="col-xs-12"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-6"
      >
        <label
          className="control-label sr-only"
          htmlFor="method"
        >
          Method
        </label>
        <select
          className="form-control"
          id="method"
          placeholder="Method"
          type={undefined}
          value="CUSTOM"
        >
          <option
            value="GET"
          >
            GET
          </option>
          <option
            value="POST"
          >
            POST
          </option>
          <option
            value="PUT"
          >
            PUT
          </option>
          <option
            value="DELETE"
          >
            DELETE
          </option>
          <option
            value="PATCH"
          >
            PATCH
          </option>
          <option
            value="HEAD"
          >
            HEAD
          </option>
          <option
            value="JSONP"
          >
            JSONP
          </option>
          <option
            value="CUSTOM"
          >
            CUSTOM
          </option>
        </select>
      </div>
      <div
        className="col-xs-6"
      >
        <input
          className="form-control"
          id="method"
          type={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;
